--- a/android/ClickCounter/AndroidManifest.xml
+++ b/android/ClickCounter/AndroidManifest.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.kagii.clickcounter" android:versionName="1.0" android:versionCode="1">
-    <uses-sdk android:minSdkVersion="4"/>
-	<application android:icon="@drawable/icon" android:label="ClickCounter">
-		<activity android:name="com.kagii.clickcounter.ClickConfig">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		<activity android:name=".CreateCounter" android:label="Create Counter" android:windowSoftInputMode="stateVisible|adjustResize" />
-		<activity android:name=".CounterScreen" android:label="Counter" android:screenOrientation="portrait" />
-	</application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.kagii.clickcounter"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+    <uses-sdk android:minSdkVersion="11" />
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="ClickCounter" >
+        <activity android:name="com.kagii.clickcounter.ClickConfig" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".CreateCounter"
+            android:label="Create Counter"
+            android:windowSoftInputMode="stateVisible|adjustResize" />
+        <activity
+            android:name=".CounterScreen"
+            android:label="Counter"
+            android:screenOrientation="portrait" />
+    </application>
+
 </manifest>
